Update en.json (POEditor.com)

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -1,6 +1,6 @@
 {
     "login": {
-        "dont_have_account": "Don't have an account yet ? aa",
+        "dont_have_account": "Don't have an account yet ?",
         "free_signup": "Sign Up for free",
         "baseline": "The Open BIM collaboration platform",
         "forgot_password": "Forgot password ?",
