--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -7,11 +7,17 @@
         "register": "Register me",
         "already_account": "Already an account ?",
         "signin": "Sign In",
-        "bad_credentials": "Bad credentials"
+        "bad_credentials": "Bad credentials",
+        "email": "Email",
+        "firstname": "Firstname",
+        "lastname": "Lastname",
+        "password": "Password",
+        "password_confirmation": "Password confirmation"
     },
     "form": {
         "required_field": "This is a required field",
         "same_password_needed": "Passwords must be identical",
-        "min_length": "Too short field"
+        "min_length": "Too short field",
+        "submit": "Submit"
     }
 }
