--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -1,17 +1,23 @@
 {
     "login": {
-        "dont_have_account": "Don't have an account yet ? aa",
+        "dont_have_account": "Don't have an account yet ?",
         "free_signup": "Sign Up for free",
         "baseline": "The Open BIM collaboration platform",
         "forgot_password": "Forgot password ?",
         "register": "Register me",
         "already_account": "Already an account ?",
         "signin": "Sign In",
-        "bad_credentials": "Bad credentials"
+        "bad_credentials": "Bad credentials",
+        "email": "Email",
+        "firstname": "Firstname",
+        "lastname": "Lastname",
+        "password": "Password",
+        "password_confirmation": "Password confirmation"
     },
     "form": {
         "required_field": "This is a required field",
         "same_password_needed": "Passwords must be identical",
-        "min_length": "Too short field"
+        "min_length": "Too short field",
+        "submit": "Submit"
     }
 }
