Forgot password: test + handle error

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -13,7 +13,9 @@
         "lastname": "Lastname",
         "password": "Password",
         "password_confirmation": "Password confirmation",
-        "already_exist_account": "An account already exist with this username"
+        "already_exist_account": "An account already exist with this username",
+        "forgot_password_text_info": "Mot de passe perdu ? Entrez votre email",
+        "ask_reset_password_success": "Un email vous a été envoyé"
     },
     "form": {
         "server_error": "We've encountered some server issues, please retry later",
