User menu markup and some style

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -1,6 +1,7 @@
 {
     "dashboard": {
-        "logout": "Logout"
+        "logout": "Logout",
+        "profile_btn": "Profile"
     },
     "project": {
         "download": "Download",
