Multiple images and viewer button

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -28,5 +28,8 @@
         "submit": "Submit",
         "project_name": "Project's name",
         "remove": "Remove"
+    },
+    "ifc": {
+      "view": "View"
     }
 }
