ajout message erreur tableau ifc

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -21,7 +21,8 @@
         "cancel": "Cancel",
         "validate": "Validate",
         "folder_name": "Folder's name",
-        "project_document": "Project's documents"
+        "project_document": "Project's documents",
+        "error_conversion": "Error in conversion"
     },
     "project_list": {
         "new_project": "New Project",
