inte model preview page projet

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -39,6 +39,6 @@
         "choose_destination": "Choose destination"
     },
     "ifc": {
-        "view": "View"
+        "open": "Open"
     }
 }
