--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -46,5 +46,9 @@
     },
     "ifc": {
         "open": "Open"
+    },
+    "users": {
+      "users": "Users",
+      "administrator": "Administrator"
     }
 }
