WIP modal users

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -50,11 +50,14 @@
     },
     "users": {
       "users": "Users",
+      "user": "User",
       "administrator": "Admin",
       "remove": "Delete user",
       "modify_rights": "Edit user rights",
       "resend_invitation": "Resend invitation ?",
       "guest": "Guest",
-      "without_answer": "without answer"
+      "without_answer": "without answer",
+      "manage_admin": "Manage administrators",
+      "users_list": "Users list"
     }
 }
