--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -21,6 +21,7 @@
         "cancel": "Cancel",
         "validate": "Validate",
         "folder_name": "Folder's name",
+        "file_name": "File's name",
         "project_document": "Project's documents",
         "error_conversion": "Error in conversion",
         "rename": "Rename",
