ajout majuscule cloud's name

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -36,7 +36,7 @@
     "cloud_list": {
       "clouds_list": "Clouds list",
       "rename_cloud": "Rename Cloud",
-      "cloud_name": "cloud's name"
+      "cloud_name": "Cloud's name"
     },
     "project_list": {
         "new_project": "New Project",
