ajou ombre container address + trad

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -30,6 +30,7 @@
         "advice": "Advice",
         "missing": "missing",
         "save": "Save",
+        "confirm": "Confirm",
         "upload": "Upload",
         "upload_text": "Upload your first file"
     },
