--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -30,6 +30,7 @@
         "advice": "Advice",
         "missing": "missing",
         "save": "Save",
+        "confirm": "Confirm",
         "upload": "Téléversement",
         "upload_text": "Téléverser votre premier fichier"
     },
