--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -1,7 +1,7 @@
 {
     "dashboard": {
         "logout": "Logout",
-        "profile_btn": "Profile"
+        "profile_btn": "Account settings"
     },
     "project": {
         "download": "Download",
