animation hover svg option-tool card-item && delete cursor pointer on base-card but add to card-item

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -32,7 +32,8 @@
         "save": "Save",
         "confirm": "Confirm",
         "upload": "Upload",
-        "upload_text": "Upload your first file"
+        "upload_text": "Upload your first file",
+        "new": "New"
     },
     "cloud_list": {
       "clouds_list": "Clouds list",
