Refactor messages for i18n, add error message when invalid email

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -67,6 +67,9 @@
       "guest": "Guest",
       "without_answer": "without answer",
       "manage_admin": "Manage administrators",
-      "users_list": "Users list"
+      "users_list": "Users list",
+      "invitation_sent": "Invitation sent to {email}",
+      "too_much_invitations_sent": "Too much invitations sent to {email}",
+      "valid_email_attended": "Empty or invalid e-mail provided"
     }
 }
