--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -1,72 +1,72 @@
 {
     "dashboard": {
-        "logout": "Logout",
+        "logout": "Se déconnecter",
         "profile_btn": "Paramètres du compte"
     },
     "project": {
-        "download": "Download",
-        "name": "Name",
+        "download": "Télécharger",
+        "name": "Nom",
         "type": "Type",
-        "creator": "Creator",
-        "updated_at": "Updated at",
-        "state": "State",
-        "view": "View",
-        "size": "Size",
-        "file": "File",
-        "type_to_search": "Type to search",
-        "move_to": "Move to",
-        "unselect_all": "Unselect all",
-        "create_folder": "Create a folder",
-        "delete": "Delete",
-        "cancel": "Cancel",
-        "validate": "Validate",
-        "folder_name": "Folder's name",
-        "file_name": "File's name",
-        "project_document": "Project's documents",
-        "error_conversion": "Error in conversion",
-        "rename": "Rename",
-        "rename_folder": "Rename folder",
-        "rename_file": "Rename file",
-        "advice": "Advice",
-        "missing": "missing",
-        "save": "Save",
-        "confirm": "Confirm",
+        "creator": "Créateur",
+        "updated_at": "Mis à jour à",
+        "state": "État",
+        "view": "Voir",
+        "size": "Taille",
+        "file": "Fichier",
+        "type_to_search": "Entrer du texte pour chercher",
+        "move_to": "Déplacer dans",
+        "unselect_all": "Tout déselectionner",
+        "create_folder": "Créer un dossier",
+        "delete": "Supprimer",
+        "cancel": "Annuler",
+        "validate": "Valider",
+        "folder_name": "Nom du dossier",
+        "file_name": "Nom du fichier",
+        "project_document": "Documents du projet",
+        "error_conversion": "Erreur durant la conversion",
+        "rename": "Renommer",
+        "rename_folder": "Renommer le dossier",
+        "rename_file": "Renommer le fichier",
+        "advice": "Conseiller",
+        "missing": "manquant",
+        "save": "Sauvegarder",
+        "confirm": "Confirmer",
         "upload": "Téléversement",
         "upload_text": "Téléverser votre premier fichier",
         "new": "Nouveau"
     },
     "cloud_list": {
-      "clouds_list": "Clouds list",
-      "rename_cloud": "Rename Cloud",
-      "cloud_name": "Cloud's name"
+      "clouds_list": "Liste des espaces",
+      "rename_cloud": "Renommer l'espace",
+      "cloud_name": "Nom de l'espace"
     },
     "project_list": {
-        "new_project": "New Project",
-        "submit": "Submit",
-        "project_name": "Project's name",
-        "remove": "Remove",
-        "rename_project": "Rename Project"
+        "new_project": "Nouveau projet",
+        "submit": "Envoyer",
+        "project_name": "Nom du projet",
+        "remove": "Retirer",
+        "rename_project": "Renommer le projet"
     },
     "dms": {
-      "no_creator": "No Creator",
-      "move_here": "Move here",
-      "move_to": "Move to",
-      "choose_destination": "Choose destination"
+      "no_creator": "Pas de créateur",
+      "move_here": "Déplacer ici",
+      "move_to": "Déplacer dans",
+      "choose_destination": "Choisir une destination"
     },
     "ifc": {
-      "open": "Open"
+      "open": "Ouvrir"
     },
     "users": {
-      "users": "Users",
-      "user": "User",
-      "administrator": "Admin",
-      "remove": "Delete user",
-      "modify_rights": "Edit user rights",
-      "resend_invitation": "Resend invitation ?",
-      "invite": "Invite",
-      "guest": "Guest",
-      "without_answer": "without answer",
-      "manage_admin": "Manage administrators",
-      "users_list": "Users list"
+      "users": "Utilisateurs",
+      "user": "Utilisateur",
+      "administrator": "Administrateur",
+      "remove": "Retirer un utilisateur",
+      "modify_rights": "Editer les droits utilisateurs",
+      "resend_invitation": "Renvoyer une invitation ?",
+      "invite": "Inviter",
+      "guest": "Invité",
+      "without_answer": "sans réponse",
+      "manage_admin": "Gérer les administrateurs",
+      "users_list": "Liste des utilisateurs"
     }
 }
