Change Conseiller to Renseigner => bad translation

--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -27,7 +27,7 @@
         "rename": "Renommer",
         "rename_folder": "Renommer le dossier",
         "rename_file": "Renommer le fichier",
-        "advice": "Conseiller",
+        "advice": "Renseigner",
         "missing": "manquant",
         "save": "Sauvegarder",
         "confirm": "Confirmer",
