Fix bad translation on advice, now named fill_in

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -27,7 +27,7 @@
         "rename": "Rename",
         "rename_folder": "Rename folder",
         "rename_file": "Rename file",
-        "advice": "Advice",
+        "fill_in": "Fill in",
         "missing": "missing",
         "save": "Save",
         "confirm": "Confirm",
