Add tooltip and label props to BaseButtonTool, fix issue #414

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -33,7 +33,11 @@
         "confirm": "Confirm",
         "upload": "Upload",
         "upload_text": "Upload your first file",
-        "new": "New"
+        "new": "New",
+        "new_folder": "New folder",
+        "import_document": "Import a document",
+        "close_tree_view": "Close tree view",
+        "open_tree_view": "Open tree view"
     },
     "cloud_list": {
       "clouds_list": "Clouds list",
