Remove hardcoded strings and add a header object in i18n

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -1,4 +1,8 @@
 {
+    "header": {
+        "back_to_project": "Back to project",
+        "clouds_projects": "Cloud's projects"
+    },
     "dashboard": {
         "logout": "Logout",
         "profile_btn": "Account settings"
