Add Loading as layouts i18n and remove hardcoded string

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -70,5 +70,8 @@
       "without_answer": "without answer",
       "manage_admin": "Manage administrators",
       "users_list": "Users list"
+    },
+    "layout": {
+        "loading": "Loading"
     }
 }
