Manage error for rights as well

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -70,6 +70,7 @@
       "users_list": "Users list",
       "invitation_sent": "Invitation sent to {email}",
       "too_much_invitations_sent": "Too much invitations sent to {email}",
-      "valid_email_attended": "Empty or invalid e-mail provided"
+      "valid_email_attended": "Empty or invalid e-mail provided",
+      "rights_attended": "Role for the user has not been provided"
     }
 }
