--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -70,6 +70,7 @@
       "users_list": "Users list",
       "invitation_sent": "Invitation envoyé à {email}",
       "too_much_invitations_sent": "Trop d'invitations envoyés à {email}",
-      "valid_email_attended": "Le champs e-mail doit être valide ou remplit"
+      "valid_email_attended": "Le champs e-mail doit être valide ou remplit",
+      "rights_attended": "Le rôle de l'utilisateur n'a pas été renseigné"
     }
 }
