--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -37,7 +37,7 @@
         "save": "Save",
         "confirm": "Confirm",
         "upload": "Upload",
-        "upload_text": "Upload your first file",
+        "upload_text": "Upload your first {type} file",
         "loading": "Loading",
         "new": "New",
         "new_folder": "New folder",
