--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -43,7 +43,9 @@
         "new_folder": "New folder",
         "import_document": "Import a document",
         "close_tree_view": "Close tree view",
-        "open_tree_view": "Open tree view"
+        "open_tree_view": "Open tree view",
+        "drop_files": "Drag and drop to store your project assets",
+        "select_file": "Select file"
     },
     "cloud_list": {
       "clouds_list": "Clouds list",
