--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -46,7 +46,9 @@
         "open_tree_view": "Ouvrir l'arborescence",
         "drop_files": "Glisser-déposer pour stocker vos fichiers de projet",
         "select_file": "Sélectionner un fichier",
-        "failed": "Echoué"
+        "failed": "Echoué",
+        "upload_failed": "Téléversement échoué",
+        "done": "terminés"
     },
     "cloud_list": {
       "clouds_list": "Liste des Espaces",
