--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -85,7 +85,8 @@
       "users_list": "Liste des utilisateurs",
       "invitation_text": "Inviter votre premier",
       "user_collaborater": "collaborateur",
-      "invitation_btn": "Invitation"
+      "invitation_btn": "Invitation",
+      "users_already_in_project": "Cet utilisateur est déjà dans ce projet"
     },
     "layout": {
       "loading": "Chargement"
