--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -86,7 +86,9 @@
       "invitation_text": "Inviter votre premier",
       "user_collaborater": "collaborateur",
       "invitation_btn": "Invitation",
-      "users_already_in_project": "Cet utilisateur est déjà dans ce projet"
+      "users_already_in_project": "Cet utilisateur est déjà dans ce projet",
+      "users_already_in_cloud": "Cet utilisateur est déjà dans ce cloud"
+
     },
     "layout": {
       "loading": "Chargement"
