replace collaborater to projet member

--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -84,7 +84,7 @@
       "manage_admin": "Gérer les administrateurs",
       "users_list": "Liste des utilisateurs",
       "invitation_text": "Inviter votre premier",
-      "user_collaborater": "collaborateur",
+      "user_member": "collaborateur",
       "invitation_btn": "Invitation",
       "users_already_in_project": "Cet utilisateur est déjà dans ce projet",
       "users_already_in_cloud": "Cet utilisateur est déjà dans ce cloud"
