--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -28,7 +28,7 @@
         "folder_name": "Folder's name",
         "file_name": "File's name",
         "project_document": "Project's documents",
-        "error_conversion": "Error in conversion",
+        "error_conversion": "Conversion error",
         "rename": "Rename",
         "rename_folder": "Rename folder",
         "rename_file": "Rename file",
