--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -56,7 +56,7 @@
         "new_project": "Nouveau projet",
         "submit": "Envoyer",
         "project_name": "Nom du projet",
-        "remove": "Retirer",
+        "remove": "Supprimer",
         "rename_project": "Renommer le projet"
     },
     "dms": {
@@ -70,7 +70,7 @@
     },
     "users": {
       "invitation_sent": "Invitation envoyé à {email}",
-      "too_much_invitations_sent": "Trop d'invitations envoyés à {email}",
+      "too_much_invitations_sent": "Trop d'invitations envoyées à {email}",
       "valid_email_attended": "Le champs e-mail doit être valide ou remplit",
       "rights_attended": "Le rôle de l'utilisateur n'a pas été renseigné",
       "users": "Utilisateurs",
