--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -9,6 +9,7 @@
         "profile_btn": "Paramètres du compte"
     },
     "project": {
+        "optimize": "Optimiser",
         "download": "Télécharger",
         "name": "Nom",
         "type": "Type",
