--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -1,99 +1,101 @@
 {
-    "header": {
-      "back_to_project": "Retourner au projet",
-      "clouds_projects": "Projets de l'Espace"
-    },
-    "dashboard": {
-        "logout": "Se déconnecter",
-        "connect_auth": "BIMData Connect",
-        "profile_btn": "Paramètres du compte"
-    },
-    "project": {
-        "download": "Télécharger",
-        "name": "Nom",
-        "type": "Type",
-        "creator": "Auteur",
-        "updated_at": "Mis à jour à",
-        "state": "Statut",
-        "view": "Voir",
-        "size": "Taille",
-        "file": "Fichier",
-        "ifc_file": "Fichier IFC",
-        "type_to_search": "Saisir du texte pour rechercher",
-        "move_to": "Déplacer vers",
-        "unselect_all": "Tout déselectionner",
-        "create_folder": "Créer un dossier",
-        "delete": "Supprimer",
-        "cancel": "Annuler",
-        "validate": "Valider",
-        "folder_name": "Nom du dossier",
-        "file_name": "Nom du fichier",
-        "project_document": "Documents du projet",
-        "error_conversion": "Erreur durant la conversion",
-        "rename": "Renommer",
-        "rename_folder": "Renommer le dossier",
-        "rename_file": "Renommer le fichier",
-        "advice": "Renseigner",
-        "missing": "manquant",
-        "save": "Sauvegarder",
-        "confirm": "Confirmer",
-        "upload": "Téléversement",
-        "upload_text": "Téléverser votre premier",
-        "loading": "Chargement",
-        "new": "Nouveau",
-        "new_folder": "Nouveau dossier",
-        "import_document": "Importer un document",
-        "close_tree_view": "Fermer l'arborescence",
-        "open_tree_view": "Ouvrir l'arborescence"
-    },
-    "cloud_list": {
-      "clouds_list": "Liste des Espaces",
-      "rename_cloud": "Renommer l'Espace",
-      "cloud_name": "Nom de l'Espace",
-      "upload_image": "Télécharger une image",
-      "delete_image": "Supprimer l'image"
-    },
-    "project_list": {
-        "new_project": "Nouveau projet",
-        "submit": "Envoyer",
-        "project_name": "Nom du projet",
-        "remove": "Supprimer",
-        "rename_project": "Renommer le projet"
-    },
-    "dms": {
-      "no_creator": "Pas d'auteur",
-      "move_here": "Déplacer ici",
-      "move_to": "Déplacer vers",
-      "choose_destination": "Choisir une destination"
-    },
-    "ifc": {
-      "open": "Ouvrir"
-    },
-    "users": {
-      "invitation_sent": "Invitation envoyé à {email}",
-      "too_much_invitations_sent": "Trop d'invitations envoyées à {email}",
-      "valid_email_attended": "Le champs e-mail doit être valide ou remplit",
-      "rights_attended": "Le rôle de l'utilisateur n'a pas été renseigné",
-      "users": "Utilisateurs",
-      "user": "Utilisateur",
-      "administrator": "Administrateur",
-      "remove": "Retirer un utilisateur",
-      "rights": "Droits",
-      "modify_rights": "Editer les droits de l'utilisateur",
-      "resend_invitation": "Renvoyer une invitation ?",
-      "invite": "Inviter",
-      "guest": "Invité",
-      "without_answer": "sans réponse",
-      "manage_admin": "Gérer les administrateurs",
-      "users_list": "Liste des utilisateurs",
-      "invitation_text": "Inviter votre premier",
-      "user_member": "collaborateur",
-      "invitation_btn": "Invitation",
-      "users_already_in_project": "Cet utilisateur est déjà dans ce projet",
-      "users_already_in_cloud": "Cet utilisateur est déjà dans ce cloud"
-
-    },
-    "layout": {
-      "loading": "Chargement"
+  "header": {
+    "back_to_project": "Retourner au projet",
+    "clouds_projects": "Projets de l'Espace"
+  },
+  "dashboard": {
+    "logout": "Se déconnecter",
+    "connect_auth": "BIMData Connect",
+    "profile_btn": "Paramètres du compte"
+  },
+  "project": {
+    "download": "Télécharger",
+    "name": "Nom",
+    "type": "Type",
+    "creator": "Auteur",
+    "updated_at": "Mis à jour à",
+    "state": "Statut",
+    "view": "Voir",
+    "size": "Taille",
+    "file": "Fichier",
+    "ifc_file": "Fichier IFC",
+    "type_to_search": "Saisir du texte pour rechercher",
+    "move_to": "Déplacer vers",
+    "unselect_all": "Tout déselectionner",
+    "create_folder": "Créer un dossier",
+    "delete": "Supprimer",
+    "cancel": "Annuler",
+    "validate": "Valider",
+    "folder_name": "Nom du dossier",
+    "file_name": "Nom du fichier",
+    "project_document": "Documents du projet",
+    "error_conversion": "Erreur durant la conversion",
+    "rename": "Renommer",
+    "rename_folder": "Renommer le dossier",
+    "rename_file": "Renommer le fichier",
+    "advice": "Renseigner",
+    "missing": "manquant",
+    "save": "Sauvegarder",
+    "confirm": "Confirmer",
+    "upload": "Téléversement",
+    "upload_text": "Téléverser votre premier",
+    "loading": "Chargement",
+    "new": "Nouveau",
+    "new_folder": "Nouveau dossier",
+    "import_document": "Importer un document",
+    "close_tree_view": "Fermer l'arborescence",
+    "open_tree_view": "Ouvrir l'arborescence"
+  },
+  "cloud_list": {
+    "clouds_list": "Liste des Espaces",
+    "rename_cloud": "Renommer l'Espace",
+    "cloud_name": "Nom de l'Espace",
+    "upload_image": "Télécharger une image",
+    "delete_image": "Supprimer l'image"
+  },
+  "project_list": {
+    "new_project": "Nouveau projet",
+    "submit": "Envoyer",
+    "project_name": "Nom du projet",
+    "remove": "Supprimer",
+    "rename_project": "Renommer le projet"
+  },
+  "dms": {
+    "no_creator": "Pas d'auteur",
+    "move_here": "Déplacer ici",
+    "move_to": "Déplacer vers",
+    "choose_destination": "Choisir une destination"
+  },
+  "ifc": {
+    "open": "Ouvrir"
+  },
+  "users": {
+    "invitation_sent": "Invitation envoyé à {email}",
+    "too_much_invitations_sent": "Trop d'invitations envoyées à {email}",
+    "valid_email_attended": "Le champs e-mail doit être valide ou remplit",
+    "rights_attended": "Le rôle de l'utilisateur n'a pas été renseigné",
+    "users": "Utilisateurs",
+    "user": "Utilisateur",
+    "administrator": "Administrateur",
+    "remove": "Retirer un utilisateur",
+    "rights": "Droits",
+    "modify_rights": "Editer les droits de l'utilisateur",
+    "resend_invitation": "Renvoyer une invitation ?",
+    "invite": "Inviter",
+    "guest": "Invité",
+    "without_answer": "sans réponse",
+    "manage_admin": "Gérer les administrateurs",
+    "users_list": "Liste des utilisateurs",
+    "invitation_text": "Inviter votre premier",
+    "user_member": "collaborateur",
+    "invitation_btn": "Invitation",
+    "users_already_in_project": "Cet utilisateur est déjà dans ce projet",
+    "users_already_in_cloud": "Cet utilisateur est déjà dans ce cloud"
+  },
+  "layout": {
+    "loading": "Chargement"
+  },
+  "viewer": {
+    "2d_window": "Visionneuse 2D"
   }
 }
